<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.cfp.citizenconnect.Popups.EmergencyContactFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emergency_numbers"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_police"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="0dp">

        <!--        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_police"
            android:tint="@color/colorPrimary" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/police_title" />

        <TextView
            android:id="@+id/police_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginEnd="20dp"
            android:text="@string/police" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/backgroundGrey"/>

    <LinearLayout
        android:id="@+id/ll_fire_brigade"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="0dp">

        <!--        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_fire"
            android:tint="@color/colorPrimary"  />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/fire_brigade_title" />

        <TextView
            android:id="@+id/fire_brigade_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginEnd="20dp"
            android:text="@string/fireBrigade" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/backgroundGrey"/>

    <LinearLayout
        android:id="@+id/ll_ambulance"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/ambulance_title" />

        <TextView
            android:id="@+id/ambulance_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            android:text="@string/ambulance" />

    </LinearLayout>

    <Button
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"

        android:layout_marginBottom="10dp"
        android:background="@drawable/button_round_corner"
        android:backgroundTint="@color/grey_85"

        android:text="Cancel"
        android:textColor="@color/black"
        android:textAllCaps="false"

        style="?android:attr/borderlessButtonStyle"
        android:elevation="0.75dp"/>

</LinearLayout>
